src/main/java/cp2025/datalog/DatalogParser.g4
// -*- Java -*- File generated by the BNF Converter (bnfc 2.9.6.1).

// Parser definition for use with ANTLRv4
parser grammar DatalogParser;

options {
  tokenVocab = DatalogLexer;
}


start_ProgramDef returns [ cp2025.datalog.Absyn.ProgramDef result ]
  : x=programDef EOF
    { $result = $x.result; }
  ;

programDef returns [ cp2025.datalog.Absyn.ProgramDef result ]
  : p_1_1=constantsDef p_1_2=rulesDef p_1_3=queriesDef
    { $result = new cp2025.datalog.Absyn.Program($p_1_1.result,$p_1_2.result,$p_1_3.result); }
  ;
constantsDef returns [ cp2025.datalog.Absyn.ConstantsDef result ]
  : Surrogate_id_SYMB_0 p_1_2=listLIdent
    { $result = new cp2025.datalog.Absyn.Constants($p_1_2.result); }
  ;
listLIdent returns [ cp2025.datalog.Absyn.ListLIdent result ]
  :  /* empty */
    { $result = new cp2025.datalog.Absyn.ListLIdent(); }
  | p_2_1=LIdent
    { $result = new cp2025.datalog.Absyn.ListLIdent(); $result.addLast($p_2_1.getText()); }
  | p_3_1=LIdent Surrogate_id_SYMB_1 p_3_3=listLIdent
    { $result = $p_3_3.result; $result.addFirst($p_3_1.getText()); }
  ;
rulesDef returns [ cp2025.datalog.Absyn.RulesDef result ]
  : Surrogate_id_SYMB_2 p_1_2=listRuleDef
    { $result = new cp2025.datalog.Absyn.Rules($p_1_2.result); }
  ;
listRuleDef returns [ cp2025.datalog.Absyn.ListRuleDef result ]
  :  /* empty */
    { $result = new cp2025.datalog.Absyn.ListRuleDef(); }
  | p_2_1=listRuleDef p_2_2=ruleDef Surrogate_id_SYMB_3
    { $result = $p_2_1.result; $result.addLast($p_2_2.result); }
  ;
ruleDef returns [ cp2025.datalog.Absyn.RuleDef result ]
  : p_1_1=atomDef Surrogate_id_SYMB_4 p_1_3=listAtomDef
    { $result = new cp2025.datalog.Absyn.Rule($p_1_1.result,$p_1_3.result); }
  ;
listAtomDef returns [ cp2025.datalog.Absyn.ListAtomDef result ]
  :  /* empty */
    { $result = new cp2025.datalog.Absyn.ListAtomDef(); }
  | p_2_1=atomDef
    { $result = new cp2025.datalog.Absyn.ListAtomDef(); $result.addLast($p_2_1.result); }
  | p_3_1=atomDef Surrogate_id_SYMB_1 p_3_3=listAtomDef
    { $result = $p_3_3.result; $result.addFirst($p_3_1.result); }
  ;
atomDef returns [ cp2025.datalog.Absyn.AtomDef result ]
  : p_1_1=predicateDef Surrogate_id_SYMB_5 p_1_3=listElement Surrogate_id_SYMB_6
    { $result = new cp2025.datalog.Absyn.Atom($p_1_1.result,$p_1_3.result); }
  ;
listElement returns [ cp2025.datalog.Absyn.ListElement result ]
  :  /* empty */
    { $result = new cp2025.datalog.Absyn.ListElement(); }
  | p_2_1=element
    { $result = new cp2025.datalog.Absyn.ListElement(); $result.addLast($p_2_1.result); }
  | p_3_1=element Surrogate_id_SYMB_1 p_3_3=listElement
    { $result = $p_3_3.result; $result.addFirst($p_3_1.result); }
  ;
element returns [ cp2025.datalog.Absyn.Element result ]
  : p_1_1=LIdent
    { $result = new cp2025.datalog.Absyn.ConstElement($p_1_1.getText()); }
  | p_2_1=UIdent
    { $result = new cp2025.datalog.Absyn.VarElement($p_2_1.getText()); }
  ;
predicateDef returns [ cp2025.datalog.Absyn.PredicateDef result ]
  : p_1_1=LIdent
    { $result = new cp2025.datalog.Absyn.LPredicate($p_1_1.getText()); }
  | p_2_1=LSIdent
    { $result = new cp2025.datalog.Absyn.LSPredicate($p_2_1.getText()); }
  ;
queriesDef returns [ cp2025.datalog.Absyn.QueriesDef result ]
  : Surrogate_id_SYMB_7 p_1_2=listStatementDef
    { $result = new cp2025.datalog.Absyn.Queries($p_1_2.result); }
  ;
listStatementDef returns [ cp2025.datalog.Absyn.ListStatementDef result ]
  :  /* empty */
    { $result = new cp2025.datalog.Absyn.ListStatementDef(); }
  | p_2_1=statementDef
    { $result = new cp2025.datalog.Absyn.ListStatementDef(); $result.addLast($p_2_1.result); }
  | p_3_1=statementDef Surrogate_id_SYMB_1 p_3_3=listStatementDef
    { $result = $p_3_3.result; $result.addFirst($p_3_1.result); }
  ;
statementDef returns [ cp2025.datalog.Absyn.StatementDef result ]
  : p_1_1=predicateDef Surrogate_id_SYMB_5 p_1_3=listLIdent Surrogate_id_SYMB_6
    { $result = new cp2025.datalog.Absyn.Statement($p_1_1.result,$p_1_3.result); }
  ;
