src/main/java/cp2025/datalog/DatalogParser.java
// Generated from src/main/java/cp2025/datalog/DatalogParser.g4 by ANTLR 4.13.2
package cp2025.datalog;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DatalogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Surrogate_id_SYMB_0=1, Surrogate_id_SYMB_1=2, Surrogate_id_SYMB_2=3, Surrogate_id_SYMB_3=4, 
		Surrogate_id_SYMB_4=5, Surrogate_id_SYMB_5=6, Surrogate_id_SYMB_6=7, Surrogate_id_SYMB_7=8, 
		COMMENT_antlr_builtin=9, MULTICOMMENT_antlr_builtin=10, LIdent=11, UIdent=12, 
		LSIdent=13, WS=14, ErrorToken=15;
	public static final int
		RULE_start_ProgramDef = 0, RULE_programDef = 1, RULE_constantsDef = 2, 
		RULE_listLIdent = 3, RULE_rulesDef = 4, RULE_listRuleDef = 5, RULE_ruleDef = 6, 
		RULE_listAtomDef = 7, RULE_atomDef = 8, RULE_listElement = 9, RULE_element = 10, 
		RULE_predicateDef = 11, RULE_queriesDef = 12, RULE_listStatementDef = 13, 
		RULE_statementDef = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"start_ProgramDef", "programDef", "constantsDef", "listLIdent", "rulesDef", 
			"listRuleDef", "ruleDef", "listAtomDef", "atomDef", "listElement", "element", 
			"predicateDef", "queriesDef", "listStatementDef", "statementDef"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Constants:'", "','", "'Rules:'", "'.'", "':-'", "'('", "')'", 
			"'Queries:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Surrogate_id_SYMB_0", "Surrogate_id_SYMB_1", "Surrogate_id_SYMB_2", 
			"Surrogate_id_SYMB_3", "Surrogate_id_SYMB_4", "Surrogate_id_SYMB_5", 
			"Surrogate_id_SYMB_6", "Surrogate_id_SYMB_7", "COMMENT_antlr_builtin", 
			"MULTICOMMENT_antlr_builtin", "LIdent", "UIdent", "LSIdent", "WS", "ErrorToken"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DatalogParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DatalogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Start_ProgramDefContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.ProgramDef result;
		public ProgramDefContext x;
		public TerminalNode EOF() { return getToken(DatalogParser.EOF, 0); }
		public ProgramDefContext programDef() {
			return getRuleContext(ProgramDefContext.class,0);
		}
		public Start_ProgramDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_ProgramDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterStart_ProgramDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitStart_ProgramDef(this);
		}
	}

	public final Start_ProgramDefContext start_ProgramDef() throws RecognitionException {
		Start_ProgramDefContext _localctx = new Start_ProgramDefContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start_ProgramDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((Start_ProgramDefContext)_localctx).x = programDef();
			setState(31);
			match(EOF);
			 ((Start_ProgramDefContext)_localctx).result =  ((Start_ProgramDefContext)_localctx).x.result; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramDefContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.ProgramDef result;
		public ConstantsDefContext p_1_1;
		public RulesDefContext p_1_2;
		public QueriesDefContext p_1_3;
		public ConstantsDefContext constantsDef() {
			return getRuleContext(ConstantsDefContext.class,0);
		}
		public RulesDefContext rulesDef() {
			return getRuleContext(RulesDefContext.class,0);
		}
		public QueriesDefContext queriesDef() {
			return getRuleContext(QueriesDefContext.class,0);
		}
		public ProgramDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterProgramDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitProgramDef(this);
		}
	}

	public final ProgramDefContext programDef() throws RecognitionException {
		ProgramDefContext _localctx = new ProgramDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			((ProgramDefContext)_localctx).p_1_1 = constantsDef();
			setState(35);
			((ProgramDefContext)_localctx).p_1_2 = rulesDef();
			setState(36);
			((ProgramDefContext)_localctx).p_1_3 = queriesDef();
			 ((ProgramDefContext)_localctx).result =  new cp2025.datalog.Absyn.Program(((ProgramDefContext)_localctx).p_1_1.result,((ProgramDefContext)_localctx).p_1_2.result,((ProgramDefContext)_localctx).p_1_3.result); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantsDefContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.ConstantsDef result;
		public ListLIdentContext p_1_2;
		public TerminalNode Surrogate_id_SYMB_0() { return getToken(DatalogParser.Surrogate_id_SYMB_0, 0); }
		public ListLIdentContext listLIdent() {
			return getRuleContext(ListLIdentContext.class,0);
		}
		public ConstantsDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantsDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterConstantsDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitConstantsDef(this);
		}
	}

	public final ConstantsDefContext constantsDef() throws RecognitionException {
		ConstantsDefContext _localctx = new ConstantsDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constantsDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(Surrogate_id_SYMB_0);
			setState(40);
			((ConstantsDefContext)_localctx).p_1_2 = listLIdent();
			 ((ConstantsDefContext)_localctx).result =  new cp2025.datalog.Absyn.Constants(((ConstantsDefContext)_localctx).p_1_2.result); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListLIdentContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.ListLIdent result;
		public Token p_2_1;
		public Token p_3_1;
		public ListLIdentContext p_3_3;
		public TerminalNode LIdent() { return getToken(DatalogParser.LIdent, 0); }
		public TerminalNode Surrogate_id_SYMB_1() { return getToken(DatalogParser.Surrogate_id_SYMB_1, 0); }
		public ListLIdentContext listLIdent() {
			return getRuleContext(ListLIdentContext.class,0);
		}
		public ListLIdentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listLIdent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterListLIdent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitListLIdent(this);
		}
	}

	public final ListLIdentContext listLIdent() throws RecognitionException {
		ListLIdentContext _localctx = new ListLIdentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listLIdent);
		try {
			setState(51);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				 ((ListLIdentContext)_localctx).result =  new cp2025.datalog.Absyn.ListLIdent(); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((ListLIdentContext)_localctx).p_2_1 = match(LIdent);
				 ((ListLIdentContext)_localctx).result =  new cp2025.datalog.Absyn.ListLIdent(); _localctx.result.addLast(((ListLIdentContext)_localctx).p_2_1.getText()); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(46);
				((ListLIdentContext)_localctx).p_3_1 = match(LIdent);
				setState(47);
				match(Surrogate_id_SYMB_1);
				setState(48);
				((ListLIdentContext)_localctx).p_3_3 = listLIdent();
				 ((ListLIdentContext)_localctx).result =  ((ListLIdentContext)_localctx).p_3_3.result; _localctx.result.addFirst(((ListLIdentContext)_localctx).p_3_1.getText()); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RulesDefContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.RulesDef result;
		public ListRuleDefContext p_1_2;
		public TerminalNode Surrogate_id_SYMB_2() { return getToken(DatalogParser.Surrogate_id_SYMB_2, 0); }
		public ListRuleDefContext listRuleDef() {
			return getRuleContext(ListRuleDefContext.class,0);
		}
		public RulesDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulesDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterRulesDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitRulesDef(this);
		}
	}

	public final RulesDefContext rulesDef() throws RecognitionException {
		RulesDefContext _localctx = new RulesDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rulesDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(Surrogate_id_SYMB_2);
			setState(54);
			((RulesDefContext)_localctx).p_1_2 = listRuleDef(0);
			 ((RulesDefContext)_localctx).result =  new cp2025.datalog.Absyn.Rules(((RulesDefContext)_localctx).p_1_2.result); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListRuleDefContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.ListRuleDef result;
		public ListRuleDefContext p_2_1;
		public RuleDefContext p_2_2;
		public TerminalNode Surrogate_id_SYMB_3() { return getToken(DatalogParser.Surrogate_id_SYMB_3, 0); }
		public ListRuleDefContext listRuleDef() {
			return getRuleContext(ListRuleDefContext.class,0);
		}
		public RuleDefContext ruleDef() {
			return getRuleContext(RuleDefContext.class,0);
		}
		public ListRuleDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listRuleDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterListRuleDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitListRuleDef(this);
		}
	}

	public final ListRuleDefContext listRuleDef() throws RecognitionException {
		return listRuleDef(0);
	}

	private ListRuleDefContext listRuleDef(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ListRuleDefContext _localctx = new ListRuleDefContext(_ctx, _parentState);
		ListRuleDefContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_listRuleDef, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			 ((ListRuleDefContext)_localctx).result =  new cp2025.datalog.Absyn.ListRuleDef(); 
			}
			_ctx.stop = _input.LT(-1);
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ListRuleDefContext(_parentctx, _parentState);
					_localctx.p_2_1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_listRuleDef);
					setState(60);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(61);
					((ListRuleDefContext)_localctx).p_2_2 = ruleDef();
					setState(62);
					match(Surrogate_id_SYMB_3);
					 ((ListRuleDefContext)_localctx).result =  ((ListRuleDefContext)_localctx).p_2_1.result; _localctx.result.addLast(((ListRuleDefContext)_localctx).p_2_2.result); 
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleDefContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.RuleDef result;
		public AtomDefContext p_1_1;
		public ListAtomDefContext p_1_3;
		public TerminalNode Surrogate_id_SYMB_4() { return getToken(DatalogParser.Surrogate_id_SYMB_4, 0); }
		public AtomDefContext atomDef() {
			return getRuleContext(AtomDefContext.class,0);
		}
		public ListAtomDefContext listAtomDef() {
			return getRuleContext(ListAtomDefContext.class,0);
		}
		public RuleDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterRuleDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitRuleDef(this);
		}
	}

	public final RuleDefContext ruleDef() throws RecognitionException {
		RuleDefContext _localctx = new RuleDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ruleDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((RuleDefContext)_localctx).p_1_1 = atomDef();
			setState(71);
			match(Surrogate_id_SYMB_4);
			setState(72);
			((RuleDefContext)_localctx).p_1_3 = listAtomDef();
			 ((RuleDefContext)_localctx).result =  new cp2025.datalog.Absyn.Rule(((RuleDefContext)_localctx).p_1_1.result,((RuleDefContext)_localctx).p_1_3.result); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListAtomDefContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.ListAtomDef result;
		public AtomDefContext p_2_1;
		public AtomDefContext p_3_1;
		public ListAtomDefContext p_3_3;
		public AtomDefContext atomDef() {
			return getRuleContext(AtomDefContext.class,0);
		}
		public TerminalNode Surrogate_id_SYMB_1() { return getToken(DatalogParser.Surrogate_id_SYMB_1, 0); }
		public ListAtomDefContext listAtomDef() {
			return getRuleContext(ListAtomDefContext.class,0);
		}
		public ListAtomDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listAtomDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterListAtomDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitListAtomDef(this);
		}
	}

	public final ListAtomDefContext listAtomDef() throws RecognitionException {
		ListAtomDefContext _localctx = new ListAtomDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listAtomDef);
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				 ((ListAtomDefContext)_localctx).result =  new cp2025.datalog.Absyn.ListAtomDef(); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				((ListAtomDefContext)_localctx).p_2_1 = atomDef();
				 ((ListAtomDefContext)_localctx).result =  new cp2025.datalog.Absyn.ListAtomDef(); _localctx.result.addLast(((ListAtomDefContext)_localctx).p_2_1.result); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				((ListAtomDefContext)_localctx).p_3_1 = atomDef();
				setState(80);
				match(Surrogate_id_SYMB_1);
				setState(81);
				((ListAtomDefContext)_localctx).p_3_3 = listAtomDef();
				 ((ListAtomDefContext)_localctx).result =  ((ListAtomDefContext)_localctx).p_3_3.result; _localctx.result.addFirst(((ListAtomDefContext)_localctx).p_3_1.result); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomDefContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.AtomDef result;
		public PredicateDefContext p_1_1;
		public ListElementContext p_1_3;
		public TerminalNode Surrogate_id_SYMB_5() { return getToken(DatalogParser.Surrogate_id_SYMB_5, 0); }
		public TerminalNode Surrogate_id_SYMB_6() { return getToken(DatalogParser.Surrogate_id_SYMB_6, 0); }
		public PredicateDefContext predicateDef() {
			return getRuleContext(PredicateDefContext.class,0);
		}
		public ListElementContext listElement() {
			return getRuleContext(ListElementContext.class,0);
		}
		public AtomDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterAtomDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitAtomDef(this);
		}
	}

	public final AtomDefContext atomDef() throws RecognitionException {
		AtomDefContext _localctx = new AtomDefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_atomDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			((AtomDefContext)_localctx).p_1_1 = predicateDef();
			setState(87);
			match(Surrogate_id_SYMB_5);
			setState(88);
			((AtomDefContext)_localctx).p_1_3 = listElement();
			setState(89);
			match(Surrogate_id_SYMB_6);
			 ((AtomDefContext)_localctx).result =  new cp2025.datalog.Absyn.Atom(((AtomDefContext)_localctx).p_1_1.result,((AtomDefContext)_localctx).p_1_3.result); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListElementContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.ListElement result;
		public ElementContext p_2_1;
		public ElementContext p_3_1;
		public ListElementContext p_3_3;
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public TerminalNode Surrogate_id_SYMB_1() { return getToken(DatalogParser.Surrogate_id_SYMB_1, 0); }
		public ListElementContext listElement() {
			return getRuleContext(ListElementContext.class,0);
		}
		public ListElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterListElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitListElement(this);
		}
	}

	public final ListElementContext listElement() throws RecognitionException {
		ListElementContext _localctx = new ListElementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listElement);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				 ((ListElementContext)_localctx).result =  new cp2025.datalog.Absyn.ListElement(); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				((ListElementContext)_localctx).p_2_1 = element();
				 ((ListElementContext)_localctx).result =  new cp2025.datalog.Absyn.ListElement(); _localctx.result.addLast(((ListElementContext)_localctx).p_2_1.result); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				((ListElementContext)_localctx).p_3_1 = element();
				setState(97);
				match(Surrogate_id_SYMB_1);
				setState(98);
				((ListElementContext)_localctx).p_3_3 = listElement();
				 ((ListElementContext)_localctx).result =  ((ListElementContext)_localctx).p_3_3.result; _localctx.result.addFirst(((ListElementContext)_localctx).p_3_1.result); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public cp2025.datalog.Absyn.Element result;
		public Token p_1_1;
		public Token p_2_1;
		public TerminalNode LIdent() { return getToken(DatalogParser.LIdent, 0); }
		public TerminalNode UIdent() { return getToken(DatalogParser.UIdent, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DatalogParserListener ) ((DatalogParserListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_element);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LIdent:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				((ElementContext)_localctx).p_1_1 = match(LIdent);
				 ((ElementContext)_localctx).result =  new cp2025.datalog.Absyn.ConstElement(((ElementContext)_localctx).p_1_1.getText()); 
				}
				break;
			case UIdent:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				((ElementContext)_localctx).p_2_1 = match(UIdent);
				 ((ElementContext)_localctx).result =  new cp2025.datalog.Absyn.VarElement(((ElementContext)_localctx).p_2_1.getText()); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
